--- a/src/main/java/org/fortytwo/developers/mybudget0123/client/view/RegisterViewDefault.ui.xml
+++ b/src/main/java/org/fortytwo/developers/mybudget0123/client/view/RegisterViewDefault.ui.xml
@@ -4,7 +4,10 @@
 	xmlns:c="urn:import:com.google.gwt.user.cellview.client">
 	
 	<g:HTMLPanel>
+	<g:Button ui:field="generateBtn">Generate</g:Button>
+	<center>
 		<c:CellTable ui:field="registerTable" />
 		<c:SimplePager ui:field="registerTablePager" />
+	</center>
 	</g:HTMLPanel>
 </ui:UiBinder> 
