fixing here and there

--- a/src/org/fortytwo/developers/mybudget0123/client/view/RegisterViewDefault.ui.xml
+++ b/src/org/fortytwo/developers/mybudget0123/client/view/RegisterViewDefault.ui.xml
@@ -5,6 +5,7 @@
 	
 	<g:HTMLPanel>
 	<g:Button ui:field="genBtn">Generate</g:Button>
+	<g:Button ui:field="addBtn">Add</g:Button>
 	<center>
 		<c:CellTable ui:field="registerTable" />
 		<c:SimplePager ui:field="registerTablePager" />
