--- a/src/org/fortytwo/developers/mybudget0123/client/view/RegisterViewDefault.ui.xml
+++ b/src/org/fortytwo/developers/mybudget0123/client/view/RegisterViewDefault.ui.xml
@@ -1,8 +1,7 @@
 <!DOCTYPE ui:UiBinder SYSTEM "http://dl.google.com/gwt/DTD/xhtml.ent">
 <ui:UiBinder xmlns:ui="urn:ui:com.google.gwt.uibinder"
 	xmlns:g="urn:import:com.google.gwt.user.client.ui"
-	xmlns:c="urn:import:com.google.gwt.user.cellview.client"
-	xmlns:d="urn:import:com.google.gwt.user.datepicker.client">
+	xmlns:c="urn:import:com.google.gwt.user.cellview.client">
 	
 	<g:HTMLPanel>
 	<g:Button ui:field="genBtn">Generate</g:Button>
@@ -11,22 +10,4 @@
 		<c:CellTable ui:field="registerTable" />
 		<c:SimplePager ui:field="registerTablePager" />
 	</center>
-	<g:DialogBox ui:field='addBox' autoHide="false" modal="true" visible="false" glassEnabled="true">
-        <g:HTMLPanel>
-            <table>
-                <tr><td>Amount:</td><td><g:DoubleBox ui:field='amountTB' /></td><td>Date:</td><td><d:DatePicker ui:field='datePicker' /><g:TextBox ui:field='dateDispla' /></td></tr>
-                <tr><td>Type:</td><td><g:ListBox ui:field="type" visibleItemCount='1'>
-  <g:item value='give' >
-    GIVE
-  </g:item>
-  <g:item value='take'>
-    TAKE
-  </g:item>
- </g:ListBox></td></tr>
-                <tr><td>Comment:</td><td><g:TextArea ui:field='commentTB' /></td></tr>
-                <tr><td><g:Button ui:field='cancelBtn'>Cancel</g:Button></td><td><g:Button ui:field='createBtn'>Create</g:Button></td></tr>
-            </table>
-        </g:HTMLPanel>
-        </g:DialogBox>
-	</g:HTMLPanel>
 </ui:UiBinder> 
