--- a/src/org/fortytwo/developers/mybudget0123/client/view/RegisterViewDefault.ui.xml
+++ b/src/org/fortytwo/developers/mybudget0123/client/view/RegisterViewDefault.ui.xml
@@ -10,4 +10,5 @@
 		<c:CellTable ui:field="registerTable" />
 		<c:SimplePager ui:field="registerTablePager" />
 	</center>
+	</g:HTMLPanel>
 </ui:UiBinder> 
